--- a/st.css
+++ b/st.css
@@ -1,62 +1,58 @@
 body{
-    background-color: gray;
+    background-color: aliceblue;
     user-select: none;
 }
 
-.box{
-    position: absolute;
+.center{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 2px;
+    place-items: center;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     background-color: black;
-    padding: 4px;
-    border-radius: 5px;
-    max-width: 360px;
+    border-radius: 1px;
+    max-width: 1000px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.item-gray{
+    background-color: gray;
+}
+
 .item{
-    background-color: #d1a700;
+    background-color: white;
     color: black;
-    padding: 15px;
+    padding: 7px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 22px;
+    font-size: 13px;
+    font-weight: 300;
     cursor: pointer;
-    font-weight: bold;
+    border: 1px solid rgba(128, 128, 128, 0.541);
 }
 
-form{
-    max-width: 100%;
-}
-
-input{
-    width: 100%;
-    height: 60px;
-    border: none;
-    font-size: 30px;
-    outline: none;
-    text-align: right;
+#zero{
+    padding-right: 12px;
 }
 
 .input{
+    justify-content: flex-end;
+    font-size: 30px;
+    min-height: 70px;
+    height: 100%;
     grid-column: 1/-1;
-    padding: 0;
+    padding: 0px;
 }
 
-.clean{
-    grid-column: 1/3;
-}
-.back{
-    grid-column: 3/-1;
+
+
+#gray{
+    background-color: rgb(187, 186, 186);
 }
 
-.equal{
-    grid-column: 4;
-    grid-row: 6/8;
-    background-color: #bdbdbd;
-}
-.zero{
-    grid-column: 1/3;
+#orange{
+    background-color:orange;
 }
