--- a/st.css
+++ b/st.css
@@ -3,14 +3,17 @@ body{
     user-select: none;
 }
 
-
+.center{
+    display: grid;
+    place-items: center;
+}
 
 .container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     background-color: black;
     border-radius: 1px;
-    max-width: 300px;
+    max-width: 1000px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
