--- a/st.css
+++ b/st.css
@@ -4,8 +4,7 @@ body{
 }
 
 .center{
-    display: grid;
-    place-items: center;
+    padding-left: 38%;
 }
 
 .container{
@@ -13,7 +12,7 @@ body{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     background-color: black;
     border-radius: 1px;
-    max-width: 1000px;
+    max-width: 460px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -24,11 +23,11 @@ body{
 .item{
     background-color: white;
     color: black;
-    padding: 7px;
+    padding: 6px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 13px;
+    font-size: 19px;
     font-weight: 300;
     cursor: pointer;
     border: 1px solid rgba(128, 128, 128, 0.541);
@@ -41,7 +40,7 @@ body{
 .input{
     justify-content: flex-end;
     font-size: 30px;
-    min-height: 70px;
+    min-height: 90px;
     height: 100%;
     grid-column: 1/-1;
     padding: 0px;
